<Fix>: Remove scrollbar in scroll wrapper

--- a/src/blocks/navigation/navigation.sass
+++ b/src/blocks/navigation/navigation.sass
@@ -30,13 +30,21 @@
 
   &__wrapper
     position: relative
-    overflow: auto
 
     width: calc(100% - 530px)
     height: 100%
 
     padding: 140px 0 60px 0
     box-sizing: border-box
+
+  &__scroll
+    height: 100%
+    -ms-overflow-style: none
+    overflow-y: auto
+    overflow: -moz-scrollbars-none
+
+    &::-webkit-scrollbar
+      width: 0
 
   &__content
     max-width: 930px
